# tts_rus

./: .env.example  .gitignore  Dockerfile.xtts  README.md  coqpit.py  coqpit2.py  pyproject.toml  requirements-gpu-py311.txt  requirements.txt  setup.py
app/: _xtts_synthesize.py  config.py  job_runner.py  main.py  models.py  storage.py  text_processing.py  tts_engine.py
app/templates/: index.html
book_example/: norm_test.txt  sample.fb2  smoke_short.txt
scripts/: prepare_speaker.py
tests/: test_api_fb2.py  test_api_jobs.py  test_book_example_pipeline.py  test_fb2.py  test_xtts.py
